// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandButton <CommandButton /> renders correctly 1`] = `
<Icon
  icon={
    <Icon
      iconInfo={
        Object {
          "iconClass": "icon-placeholder",
          "iconSrc": undefined,
        }
      }
    />
  }
  key="addMessage"
  onClick={[Function]}
/>
`;

exports[`GroupButton <GroupButton /> renders correctly 1`] = `
<GroupItem
  direction={3}
  groupItemDef={
    GroupItemDef {
      "_iconLabelSupport": IconLabelSupport {
        "iconClass": "icon-placeholder",
        "label": "tests.label",
        "tooltip": "",
      },
      "_itemList": ItemList {
        "_items": Array [
          ToolItemDef {
            "_iconLabelSupport": IconLabelSupport {
              "iconClass": "icon-placeholder",
              "label": "buttons.tool2",
              "tooltip": "",
            },
            "execute": [Function],
            "featureId": "",
            "isEnabled": true,
            "isEnabledExpr": "",
            "isPressed": false,
            "isVisible": true,
            "isVisibleExpr": "",
            "itemSyncMsg": "",
            "toolId": "tool2",
          },
        ],
      },
      "_itemMap": Map {
        "tool2" => ToolItemDef {
          "_iconLabelSupport": IconLabelSupport {
            "iconClass": "icon-placeholder",
            "label": "buttons.tool2",
            "tooltip": "",
          },
          "execute": [Function],
          "featureId": "",
          "isEnabled": true,
          "isEnabledExpr": "",
          "isPressed": false,
          "isVisible": true,
          "isVisibleExpr": "",
          "itemSyncMsg": "",
          "toolId": "tool2",
        },
      },
      "_items": Array [
        "test1",
        "tool2",
        "tool3",
        "tool4",
      ],
      "direction": 3,
      "execute": [Function],
      "featureId": "",
      "groupId": "",
      "isEnabled": true,
      "isEnabledExpr": "",
      "isPressed": false,
      "isVisible": true,
      "isVisibleExpr": "",
      "itemSyncMsg": "",
      "itemsInColumn": 4,
    }
  }
  iconClass="icon-placeholder"
  items={
    Array [
      "test1",
      "tool2",
      "tool3",
      "tool4",
    ]
  }
  itemsInColumn={4}
  key=""
  labelKey="UiFramework:tests.label"
/>
`;

exports[`ToolButton <ToolButton /> renders correctly 1`] = `
<Icon
  icon={
    <Icon
      iconInfo={
        Object {
          "iconClass": "icon-placeholder",
          "iconSrc": undefined,
        }
      }
    />
  }
  isActive={false}
  key="tool1"
  onClick={[Function]}
/>
`;
